--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>animals of the world</title>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <link rel="stylesheet" href="assets/css/site.css">
-    <link rel="stylesheet" href="assets/css/modal.css">
+
 
     <script src="assets/js/gallery.js" defer></script>
 
@@ -22,7 +22,16 @@
         <p>A gallery of fantastic animals</p>
     </header>
 
-    <section id="app"></section>
+    <section id="app">
+        <p id="back"><</p>
+        <img id="galleryImage" src="assets/img/elephant.jpg" alt="gallery image">
+        
+        <p id="forward">></p>
+      
+
+
+
+    </section>
 
 
 </body>
